--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "qrcode.react": "^0.9.2",
     "react": "^16.6.3",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.6.3",
