--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-cookies": "^0.1.0",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-select": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
