--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-cookies": "^0.1.0",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "^2.3.0"
   },
