--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^1.1.1",
     "qrcode.react": "^0.9.2",
-    "react": "^16.7.0",
+    "react": "^16.8.1",
+    "react-chartjs": "^1.2.0",
     "react-cookies": "^0.1.0",
     "react-datepicker": "^2.0.0",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "^2.3.0"
