--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^1.1.1",
+    "moment": "^2.24.0",
     "qrcode.react": "^0.9.2",
     "react": "^16.8.1",
+    "react-agenda": "0.0.8",
     "react-chartjs": "^1.2.0",
     "react-cookies": "^0.1.0",
     "react-datepicker": "^2.0.0",
