--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^1.10.1",
+    "@devexpress/dx-react-scheduler": "^1.10.1",
     "axios": "^0.18.0",
     "chart.js": "^1.1.1",
+    "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "qrcode.react": "^0.9.2",
     "react": "^16.8.1",
