--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^1.1.1",
+    "globalize": "^0.1.1",
     "moment": "^2.24.0",
     "qrcode.react": "^0.9.2",
     "react": "^16.8.1",
+    "react-big-calendar": "^0.20.3",
     "react-chartjs": "^1.2.0",
     "react-cookies": "^0.1.0",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.8.1",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "react-select": "^2.3.0"
   },
   "scripts": {
