--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "qrcode.react": "^0.9.2",
     "react": "^16.8.1",
     "react-big-calendar": "^0.20.3",
+    "react-bootstrap-table-next": "^3.0.0",
+    "react-bootstrap-table2-filter": "^1.1.5",
+    "react-bootstrap-table2-paginator": "^2.0.3",
+    "react-bootstrap-table2-toolkit": "^1.3.1",
     "react-chartjs": "^1.2.0",
     "react-cookies": "^0.1.0",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.8.1",
     "react-loader-spinner": "^2.3.0",
+    "react-qr-reader": "^2.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "react-select": "^2.3.0"
