--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.8.1",
     "react-loader-spinner": "^2.3.0",
     "react-qr-reader": "^2.2.1",
+    "react-rating": "^1.6.2",
     "react-responsive-modal": "^3.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
