--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "globalize": "^0.1.1",
     "material-table": "^1.32.0",
+    "md5": "^2.2.1",
     "moment": "^2.24.0",
     "qrcode.react": "^0.9.2",
     "react": "^16.8.1",
@@ -15,14 +16,14 @@
     "react-datepicker": "^2.0.0",
     "react-detect-offline": "^2.3.0",
     "react-dom": "^16.8.1",
-    "react-liquid-gauge": "^1.2.4",
     "react-loader-spinner": "^2.3.0",
     "react-qr-reader": "^2.2.1",
     "react-rating": "^1.6.2",
     "react-responsive-modal": "^3.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
-    "react-select": "^2.3.0"
+    "react-select": "^2.3.0",
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +39,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "workbox-build": "^4.3.0"
+  }
 }
