--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Fideliz",
-  "name": "Fideliz",
+  "short_name": "Fidliz",
+  "name": "Fidliz",
   "icons": [
     {
       "src": "icon.png",
@@ -13,7 +13,7 @@
       "type":"image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
