--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-datepicker": "^2.0.0",
     "react-detect-offline": "^2.3.0",
     "react-dom": "^16.8.1",
+    "react-ga": "^2.5.7",
     "react-loader-spinner": "^2.3.0",
     "react-qr-reader": "^2.2.1",
     "react-rating": "^1.6.2",
